--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -52,7 +52,7 @@ jobs:
       uses: SonarSource/sonarqube-scan-action@v1.1.0
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: Kazimnotmalik123&
           SONAR_HOST_URL: "http://localhost:9000"
       with:
           args: >
