--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -55,13 +55,13 @@ jobs:
           args:
             # Unique key of your project. You can find it in SonarQube > [my project] > Project Information (top-right menu)
             # mandatory
-            -Dsonar.projectKey=sonarqude
-            -Dsonar.projectName=sonarqude
+            -Dsonar.projectKey="sonarqude"
+            -Dsonar.projectName="sonarqude"
             -Dsonar.token=${{ secrets.SONAR_TOKEN }} 
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.language=kotlin
-            -Dsonar.sourceEncoding=UTF-8
-            -Dsonar.sources=src/main/
+            -Dsonar.language="kotlin"
+            -Dsonar.sourceEncoding="UTF-8"
+            -Dsonar.sources="src/main/"
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
