--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -26,10 +26,12 @@ jobs:
 
       - name: Install SonarScanner
         run: |
-          curl -LsS https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-5.0.1.3006-linux.zip -o sonar-scanner.zip
-          unzip sonar-scanner.zip
-          mv sonar-scanner-5.0.1.3006-linux /opt/sonar-scanner
-          echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
+         SONAR_SCANNER_VERSION=$(curl -s https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/ | grep -o 'sonar-scanner-cli-[0-9.]\+-linux.zip' | sort -V | tail -n 1)
+         curl -LsS "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/$SONAR_SCANNER_VERSION" -o sonar-scanner.zip
+         unzip sonar-scanner.zip
+         mv sonar-scanner-cli-* /opt/sonar-scanner
+         echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
+
 
       - name: Verify Java Version
         run: java -version
