--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -52,8 +52,8 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   # add the URL of your instance to the secrets of this repo with the name SONAR_HOST_URL (Settings > Secrets > Actions > add new repository secret)
         with:
           args: >
-            -Dsonar.projectKey=your-correct-project-key
-            -Dsonar.organization=your-organization-name
+            -Dsonar.projectKey=sonarqude
+            -Dsonar.organization=kazimabusnaimeh
             -Dsonar.token=${{ secrets.SONAR_TOKEN }}
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
             -Dsonar.language=kotlin
