--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -30,14 +30,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  
-          JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
         with:
-          args: >
-            -Dsonar.projectKey=sonarqude
-            -Dsonar.organization=kazimabusnaimeh
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+          args:
+            -Dsonar.projectKey="sonarqude"
+            -Dsonar.projectName="sonarqude"
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }} 
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.language=kotlin
-            -Dsonar.sourceEncoding=UTF-8
-            -Dsonar.sources=src/main/
-            -Dsonar.verbose=true
+            -Dsonar.language="kotlin"
+            -Dsonar.sourceEncoding="UTF-8"
+            -Dsonar.sources="src/main/"
