--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -23,13 +23,20 @@ jobs:
 
       - name: Checkout Repository
         uses: actions/checkout@v4
-          
+
+      - name: Set Java 17 as default
+        run: echo "JAVA_HOME=$(which java)" >> $GITHUB_ENV
+
+      - name: Verify Java Version
+        run: java -version
+
       - name: Analyze with SonarQube
         uses: SonarSource/sonarqube-scan-action@v1.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  
+          JAVA_HOME: ${{ env.JAVA_HOME }}   # Ensure SonarQube uses Java 17
         with:
           args:
             -Dsonar.projectKey="sonarqude"
