--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,53 +1,53 @@
-name: SonarQube analysis
+# name: SonarQube analysis
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+#   workflow_dispatch:
 
-permissions:
-  pull-requests: read
+# permissions:
+#   pull-requests: read
 
-jobs:
-  Analysis:
-    runs-on: ubuntu-latest
+# jobs:
+#   Analysis:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin' 
-          java-version: '17'
+#     steps:
+#       - name: Set up JDK 17
+#         uses: actions/setup-java@v3
+#         with:
+#           distribution: 'temurin' 
+#           java-version: '17'
 
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+#       - name: Checkout Repository
+#         uses: actions/checkout@v4
 
-      - name: Install JDK 17
-        run: |
-          sudo apt update
-          sudo apt install -y openjdk-17-jdk
-          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
-          echo "/usr/lib/jvm/java-17-openjdk-amd64/bin" >> $GITHUB_PATH
+#       - name: Install JDK 17
+#         run: |
+#           sudo apt update
+#           sudo apt install -y openjdk-17-jdk
+#           echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
+#           echo "/usr/lib/jvm/java-17-openjdk-amd64/bin" >> $GITHUB_PATH
 
-      - name: Verify Java Version
-        run: java -version
+#       - name: Verify Java Version
+#         run: java -version
 
-      - name: Analyze with SonarQube
-        uses: SonarSource/sonarqube-scan-action@v1.1.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  
-          JAVA_HOME: ${{ env.JAVA_HOME }}  
+#       - name: Analyze with SonarQube
+#         uses: SonarSource/sonarqube-scan-action@v1.1.0
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  
+#           JAVA_HOME: ${{ env.JAVA_HOME }}  
           
-        with:
-          args:
-            -Dsonar.projectKey="sonarqude"
-            -Dsonar.projectName="sonarqude"
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }} 
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.language="kotlin"
-            -Dsonar.sourceEncoding="UTF-8"
-            -Dsonar.sources="src/main/"
+#         with:
+#           args:
+#             -Dsonar.projectKey="sonarqude"
+#             -Dsonar.projectName="sonarqude"
+#             -Dsonar.token=${{ secrets.SONAR_TOKEN }} 
+#             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+#             -Dsonar.language="kotlin"
+#             -Dsonar.sourceEncoding="UTF-8"
+#             -Dsonar.sources="src/main/"
