--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,8 +1,6 @@
-name: SonarQube analysis
+name: "sonar_cloud_scan_github_actions"
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
@@ -11,43 +9,18 @@ permissions:
   pull-requests: read
 
 jobs:
-  Analysis:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin' 
-          java-version: '17'
-
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install JDK 17
-        run: |
-          sudo apt update
-          sudo apt install -y openjdk-17-jdk
-          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
-          echo "/usr/lib/jvm/java-17-openjdk-amd64/bin" >> $GITHUB_PATH
-
-      - name: Verify Java Version
-        run: java -version
-
-      - name: Analyze with SonarQube
-        uses: SonarSource/sonarqube-scan-action@v1.1.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  
-          JAVA_HOME: ${{ env.JAVA_HOME }}  
-          
-        with:
-          args:
-            -Dsonar.projectKey="sonarqude"
-            -Dsonar.projectName="sonarqude"
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }} 
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.language="kotlin"
-            -Dsonar.sourceEncoding="UTF-8"
-            -Dsonar.sources="src/main/"
+ DomeSonarCloudScan:
+   runs-on: ubuntu-latest
+   steps:
+     - uses: actions/checkout@v3
+       with: 
+            fetch-depth: 0
+     - name: SonarCloud Scan
+       uses: sonarsource/sonarcloud-github-action@master
+       env: 
+           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}  
+           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+       with:
+          args: >
+             -Dsonar.projectKey=Sonar-Qube
+             -Dsonar.organization=kazimabusnaimeh
